GATEWAY/src/pages/home/home.scss
page-home {

}

ion-title {
  float: left;
}

.mainList {
  margin-left: 10px;
  margin-right: 10px;
}

.devices {
  margin-bottom: 7px;
}

.titleBttn {
  float: right;
}

.bttn {
  float: right;
  width: 100px;
}

.bttnRel {
  margin-top: 7px;
  padding-top: 5px;
  padding-bottom: 5px;
  float: left;
}

.toggleIonItem {
  margin: 0;
  padding: 0;
}

.toggleText {
  width: 60px;
  margin: 0;
  padding-left: 5px;
  padding-right: 0;
  padding-top: 0;
  padding-bottom: 0;
}

.tgle {
  width: 70px;
  margin: 0;
  padding: 0;
}

